CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#设置工程名称（工程、解决方案）
PROJECT(d3_keybd)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(PDB_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(src)
